<?xml version="1.0" encoding="utf-8"?>
<PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">
    <PreferenceCategory android:title="@string/loc_title"
        android:icon="@drawable/pin">
        <SwitchPreference
            android:defaultValue="true"
            android:disableDependentsState="true"
            android:key="USE_DEVICE_LOCATION"
            android:summary="@string/attachment_summary"
            android:title="@string/attachment_titlel" />
        <Preference
            android:dependency="USE_DEVICE_LOCATION"
            android:key="CUSTOM_LOCATION"
            android:summary="@string/attachment2_summary"
            android:title="@string/attchement_title">
            <!--intent
                android:action="com.example.wetherforecastapp.SETTING_START_ACTIVITY"
                android:targetClass="com.example.wetherforecastapp.MapsActivity"
                android:targetPackage="com.example.wetherforecastapp" /-->
        </Preference>
        <EditTextPreference
            android:dependency="USE_DEVICE_LOCATION"
            android:key="@string/latitude_key"
            app:isPreferenceVisible="false"
            android:summary="%s">
        </EditTextPreference>
    </PreferenceCategory>
    <PreferenceCategory android:title="@string/units_title"
        android:icon="@drawable/filter">
        <ListPreference
            android:defaultValue="METRIC"
            android:entries="@array/unitSystemEntries"
            android:entryValues="@array/unitSystemValues"
            android:key="@string/attchement_unit"
            android:title="@string/unit_key"
            android:summary="%s"/>
    </PreferenceCategory>
    <PreferenceCategory android:title="@string/language_title"
        android:icon="@drawable/translation">
        <ListPreference
            android:defaultValue="ENGLISH"
            android:entries="@array/languageSystemEntries"
            android:entryValues="@array/languageSystemValues"
            android:key="@string/attchement_language"
            android:summary="%s"
            android:title="@string/attchement2_language" />
    </PreferenceCategory>
</PreferenceScreen>
    <!-- android:summary="@string/unit_metric_summary"-->