<?xml version="1.0" encoding="utf-8"?>

    <androidx.cardview.widget.CardView
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        android:layout_weight="2"
        android:layout_height="match_parent"
        android:layout_width="match_parent"
        android:layout_marginTop="20dp"
        android:layout_marginStart="15dp"
        android:layout_marginEnd="15dp"
        android:layout_marginBottom="20dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        android:id="@+id/register_card"
        app:cardCornerRadius="8dp"
        app:cardElevation="8dp"
        app:cardBackgroundColor="@color/lightGreen">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:id="@+id/my_layout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:focusable="true"
            android:focusableInTouchMode="true"
            android:paddingBottom="16dp">


            <TextView
                android:id="@+id/Describtion"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                android:layout_marginTop="10dp"
                android:layout_marginStart="5dp"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/Describtion"/>

            <EditText
                android:id="@+id/Describtion_tv"
                android:layout_width="0dp"
                android:layout_height="35dp"
                android:layout_marginStart="16dp"
                android:layout_marginTop="5dp"
                android:layout_marginEnd="16dp"
                android:autofillHints=""
                android:background="@drawable/text_view_style_bg"
                android:ems="10"
                android:inputType="textPersonName"
                android:paddingStart="8dp"
                android:textColor="@color/colorSecond"
                android:textSize="13sp"
                app:layout_constraintTop_toBottomOf="@+id/Describtion"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.0"
                app:layout_constraintStart_toStartOf="parent"/>

            <TextView
                android:id="@+id/Date"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/Describtion_tv"
                android:layout_marginTop="10dp"
                android:layout_marginStart="5dp"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/Date"/>

            <ImageView
                android:id="@+id/calender_btn"
                android:layout_width="50dp"
                android:layout_height="50dp"
                android:layout_marginTop="4dp"
                android:src="@drawable/ic_baseline_wb_sunny_24"
                app:layout_constraintTop_toBottomOf="@+id/Date"
                app:layout_constraintStart_toStartOf="parent"/>


            <LinearLayout
                android:id="@+id/firstRow"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/calender_btn"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:weightSum="2"
                android:orientation="horizontal">
                <TextView
                    android:id="@+id/fromTime"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/Describtion_tv"
                    android:layout_marginTop="10dp"
                    android:layout_marginStart="5dp"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/From"
                    android:layout_weight="1"/>

                <ImageView
                    android:id="@+id/fromTimeImg"
                    android:layout_width="50dp"
                    android:layout_height="50dp"
                    android:layout_marginTop="4dp"
                    android:src="@drawable/ic_baseline_wb_sunny_24"
                    app:layout_constraintTop_toBottomOf="@+id/Date"
                    app:layout_constraintStart_toStartOf="parent"
                    android:layout_gravity="center"
                    />

            </LinearLayout>
            <LinearLayout
                android:id="@+id/secondRow"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/firstRow"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:weightSum="2"
                android:orientation="horizontal">
                <TextView
                    android:id="@+id/toTime"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/Describtion_tv"
                    android:layout_marginTop="10dp"
                    android:layout_marginStart="5dp"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/to"
                    android:layout_weight="1"/>

                <ImageView
                    android:id="@+id/toTimeImg"
                    android:layout_width="50dp"
                    android:layout_height="50dp"
                    android:layout_marginTop="4dp"
                    android:src="@drawable/ic_baseline_wb_sunny_24"
                    app:layout_constraintTop_toBottomOf="@+id/Date"
                    app:layout_constraintStart_toStartOf="parent"
                    android:layout_gravity="center"/>

            </LinearLayout>

            <TextView
                android:id="@+id/soundType"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/secondRow"
                android:layout_marginTop="10dp"
                android:layout_marginStart="5dp"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/soundType"/>

            <LinearLayout
                android:id="@+id/thirdRow"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/soundType"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:weightSum="2"
                android:orientation="horizontal">

                <CheckBox
                    android:id="@+id/notification"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/secondRow"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/notification"
                    android:layout_weight="1"/>

                <CheckBox
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/secondRow"
                    android:id="@+id/loopSound"
                    android:text="@string/alarmSound"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"/>


            </LinearLayout>


            <TextView
                android:id="@+id/event"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/thirdRow"
                android:layout_marginTop="10dp"
                android:layout_marginStart="5dp"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/Events"/>
            <Spinner
                android:id="@+id/event_spinner"
                style="@android:style/Widget.Holo.Light.Spinner"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="4dp"
                android:popupBackground="@color/lightGreen"
                android:backgroundTint="@color/black"
                android:entries="@array/event_options"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/event" />



            <Button
                android:id="@+id/add_alarm_btn"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="24dp"
                android:layout_marginBottom="21dp"
                android:text="@string/save_add_btn"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.452"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/event_spinner"
                app:layout_constraintVertical_bias="0.19"
                android:background="@color/colorAccent"
                app:backgroundTint="@null" />


        </androidx.constraintlayout.widget.ConstraintLayout>

    </androidx.cardview.widget.CardView>