<?xml version="1.0" encoding="utf-8"?>
<androidx.core.widget.NestedScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    app:layout_behavior="@string/appbar_scrolling_view_behavior"
    tools:context=".ui.view.ScrollingActivity"
    tools:showIn="@layout/activity_scrolling">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/colorAccent">
        <TextView
            android:id="@+id/Date"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            android:layout_marginStart="10dp"
            tools:text="date"
            android:textSize="25dp"
            android:drawableStart="@drawable/ic_baseline_date_range_24"/>
        <TextView
            android:id="@+id/Time"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/Date"
            android:layout_marginStart="10dp"
            tools:text="date"
            android:textSize="25dp"
            android:drawableStart="@drawable/ic_baseline_date_range_24"/>

        <Button
            android:text="@string/sevenDayes"
            android:id="@+id/sevenDays_btn"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/Time"
            android:layout_margin="30dp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@drawable/veiws_bg"
            app:backgroundTint="@null"
            />

        <androidx.recyclerview.widget.RecyclerView
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/sevenDays_btn"
            android:id="@+id/day_List"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="12dp"
            android:orientation="horizontal"
            tools:listitem="@layout/day_item"
            app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager"/>

        <androidx.recyclerview.widget.RecyclerView
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/day_List"
            android:id="@+id/hour_List"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="12dp"
            android:orientation="horizontal"
            tools:listitem="@layout/hour_item"
            app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager"/>
        <androidx.cardview.widget.CardView
            android:id="@+id/detailsCard"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/hour_List"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="10dp"
            app:cardCornerRadius="20dp"
            app:cardBackgroundColor="@color/lightGreen"
            app:backgroundTint="@null">
            <androidx.constraintlayout.widget.ConstraintLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="10dp">
                <TextView
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent"
                    android:id="@+id/details"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/Details"
                    android:textColor="@color/white"
                    android:textSize="15dp"/>
                <View
                    android:id="@+id/firstline"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/details"
                    android:layout_width="match_parent"
                    android:layout_height="1dp"
                    android:background="@android:color/white"/>
                <LinearLayout
                    android:orientation="vertical"
                    android:id="@+id/horizline"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/firstline"
                    app:layout_constraintBottom_toBottomOf="parent"
                    android:layout_width="1dp"
                    android:layout_height="70dp"
                    android:layout_marginEnd="5dp"
                    android:background="@android:color/white"
                    app:backgroundTint="@null"/>
                <LinearLayout
                    android:id="@+id/firstrow"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/firstline"
                    android:orientation="horizontal"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:weightSum="4">
                    <LinearLayout
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:orientation="horizontal"
                        android:layout_weight="2">
                        <LinearLayout
                            android:orientation="vertical"
                            android:layout_width="0dp"
                            android:layout_height="wrap_content"
                            android:layout_weight="1.3">
                            <TextView
                                android:id="@+id/cloud"
                                android:text="@string/cloud"
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:textColor="@color/textColor"
                                android:textSize="12dp"/>
                            <TextView
                                android:id="@+id/cloud_tv"
                                android:text="@string/cloud"
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:layout_marginStart="5dp"
                                android:textColor="@color/white"
                                android:textSize="15dp"/>

                        </LinearLayout>
                        <ImageView
                            android:layout_weight=".7"
                            android:src="@drawable/ic_baseline_wb_sunny_24"
                            android:layout_width="0dp"
                            android:layout_height="wrap_content"
                            android:layout_gravity="center"/>

                    </LinearLayout>
                    <LinearLayout
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:orientation="horizontal"
                        android:layout_weight="2">
                        <LinearLayout
                            android:orientation="vertical"
                            android:layout_width="0dp"
                            android:layout_height="wrap_content"
                            android:layout_weight="1.3">
                            <TextView
                                android:id="@+id/wend"
                                android:text="@string/wend"
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:textColor="@color/textColor"
                                android:textSize="12dp"/>
                            <TextView
                                android:id="@+id/wend_tv"
                                android:text="@string/wend"
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:layout_marginStart="5dp"
                                android:textColor="@color/white"
                                android:textSize="15dp"/>

                        </LinearLayout>
                        <ImageView
                            android:layout_weight=".7"
                            android:src="@drawable/ic_baseline_wb_sunny_24"
                            android:layout_width="0dp"
                            android:layout_height="wrap_content"
                            android:layout_gravity="center"/>

                    </LinearLayout>
                </LinearLayout>
                <View
                    android:id="@+id/secoundline"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/firstrow"
                    android:layout_width="match_parent"
                    android:layout_height="1dp"
                    android:background="@android:color/white"/>
                <LinearLayout
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/secoundline"
                    android:orientation="horizontal"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:weightSum="2">
                    <LinearLayout
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:orientation="horizontal"
                        android:layout_weight="1">
                        <LinearLayout
                            android:orientation="vertical"
                            android:layout_width="0dp"
                            android:layout_height="wrap_content"
                            android:layout_weight="1.3">
                            <TextView
                                android:id="@+id/humidity"
                                android:text="@string/Humidity"
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:textColor="@color/textColor"
                                android:textSize="12dp"/>
                            <TextView
                                android:id="@+id/humidity_tv"
                                android:text="@string/Humidity"
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:layout_marginStart="5dp"
                                android:textColor="@color/white"
                                android:textSize="15dp"/>

                        </LinearLayout>
                        <ImageView
                            android:layout_weight=".7"
                            android:src="@drawable/ic_baseline_wb_sunny_24"
                            android:layout_width="0dp"
                            android:layout_height="wrap_content"
                            android:layout_gravity="center"/>

                    </LinearLayout>
                    <LinearLayout
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:orientation="horizontal"
                        android:layout_weight="1">
                        <LinearLayout
                            android:orientation="vertical"
                            android:layout_width="0dp"
                            android:layout_height="wrap_content"
                            android:layout_weight="1.3">
                            <TextView
                                android:id="@+id/pressure"
                                android:text="@string/Pressure"
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:textColor="@color/textColor"
                                android:textSize="12dp"/>
                            <TextView
                                android:id="@+id/pressure_tv"
                                android:text="@string/Pressure"
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:layout_marginStart="5dp"
                                android:textColor="@color/white"
                                android:textSize="15dp"/>

                        </LinearLayout>
                        <ImageView
                            android:layout_weight=".7"
                            android:src="@drawable/ic_baseline_wb_sunny_24"
                            android:layout_width="0dp"
                            android:layout_height="wrap_content"
                            android:layout_gravity="center"/>

                    </LinearLayout>
                </LinearLayout>

            </androidx.constraintlayout.widget.ConstraintLayout>
        </androidx.cardview.widget.CardView>

        <ImageView
            app:layout_constraintTop_toBottomOf="@id/detailsCard"
            android:layout_width="match_parent"
            android:layout_height="60dp"
            android:background="@color/colorAccent"/>



    </androidx.constraintlayout.widget.ConstraintLayout>
</androidx.core.widget.NestedScrollView>